# latte-wm

./: AUTHORS  Makefile.am  Makefile.in  README  aclocal.m4  autogen.sh  config.h.in~  configure  configure.ac
defaults/: Makefile.in
helper-dialog/: Makefile.am  Makefile.in  helper-dialog.c
icons/: Makefile.in
icons/22x22/: Makefile.in
icons/48x48/: Makefile.in
icons/scalable/: Makefile.in
settings-dialogs/: Makefile.am  Makefile.in
src/: Makefile.am  Makefile.in  client.c  client.h  compositor.c  compositor.h  cycle.c  debug.h  display.c  display.h  event_filter.c  event_filter.h  events.c  focus.c  frame.c  hints.c  icons.c  keyboard.c  keyboard.h  main.c  menu.c  misc.c  moveresize.c  mypixmap.c  mywindow.c  netwm.c  parserc.c  placement.c  poswin.c  screen.c  screen.h  session.c  settings.c  settings.h  stacking.c  startup_notification.c  tabwin.c  terminate.c  transients.c  ui_style.c  (+4 more)
themes/: Makefile.am  Makefile.in
themes/default/: Makefile.in
